--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -114,7 +114,7 @@
 // TO DO LIST COMPONENT: LIST, ITEMS, PRIORITY STATUS, DELETE BUTTON
 .todo-list {
   position: relative;
-  max-height: 30rem;
+  max-height: 24rem;
   margin-top: 7rem;
   padding: 0 0.3rem 3rem 0.3rem;
   list-style: none;
@@ -142,7 +142,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.9rem 2rem;
     margin-bottom: 2rem;
     border: 1px solid transparent;
     border-radius: 1rem;
